[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/CameraGimbal.gd" type="Script" id=2]

[sub_resource type="ProceduralSkyMaterial" id=8]

[sub_resource type="Sky" id=1]
sky_material = SubResource( 8 )

[sub_resource type="Environment" id=2]
background_mode = 2
sky = SubResource( 1 )
sky_custom_fov = 72.4

[sub_resource type="StandardMaterial3D" id=3]
albedo_color = Color(1, 0, 0.00784314, 1)

[sub_resource type="BoxMesh" id=4]
material = SubResource( 3 )

[sub_resource type="MultiMesh" id=5]
transform_format = 1
mesh = SubResource( 4 )

[sub_resource type="BoxShape3D" id=6]
size = Vector3(200, 0.2, 400)

[sub_resource type="PlaneMesh" id=7]
size = Vector2(200, 400)

[node name="Spatial" type="Node3D"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.783125, 0.326696, -0.529136, -0.140253, 0.921752, 0.361527, 0.605842, -0.208908, 0.767667, -15.9405, 16.3017, 27.6911)
light_energy = 0.75
shadow_enabled = true
script = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
script = null

[node name="MultiMeshInstance" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource( 5 )
script = null

[node name="Floor" type="StaticBody3D" parent="."]
script = null

[node name="CollisionShape" type="CollisionShape3D" parent="Floor"]
shape = SubResource( 6 )
script = null

[node name="MeshInstance" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.106584, -9.53674e-07, -0.000896454)
mesh = SubResource( 7 )
surface_material_override/0 = null
script = null

[node name="CubeContainer" type="Node3D" parent="."]
script = null

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = null

[node name="LaunchButton" type="Button" parent="CanvasLayer"]
offset_left = 858.0
offset_top = 124.0
offset_right = 926.0
offset_bottom = 153.0
text = "Launch"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="CanvasLayer"]
offset_left = 952.0
offset_top = 125.333
offset_right = 1006.0
offset_bottom = 154.333
text = "Reset"
script = null

[node name="FPSLabel" type="Label" parent="CanvasLayer"]
offset_left = 709.333
offset_top = 2.66669
offset_right = 741.333
offset_bottom = 28.6667
custom_colors/font_color = Color(1, 0, 0, 1)
text = "FPS:"
structured_text_bidi_override_options = []
script = null

[node name="NumLabel" type="Label" parent="CanvasLayer"]
offset_left = 852.667
offset_top = 32.6667
offset_right = 905.667
offset_bottom = 58.6667
custom_colors/font_color = Color(0.0117647, 0.117647, 0.6, 1)
text = "cubes: "
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SleepLabel" type="Label" parent="CanvasLayer"]
offset_left = 894.117
offset_top = 84.0795
offset_right = 1000.12
offset_bottom = 110.079
custom_colors/font_color = Color(0.0117647, 0.117647, 0.6, 1)
text = "sleeping: (n/a)"
structured_text_bidi_override_options = []
script = null

[node name="HSlider" type="HSlider" parent="CanvasLayer"]
offset_left = 848.0
offset_top = 66.0
offset_right = 1012.0
offset_bottom = 82.0
min_value = 25.0
max_value = 10000.0
step = 25.0
page = 100.0
value = 500.0
rounded = true
allow_greater = true
allow_lesser = true
tick_count = 4
ticks_on_borders = true
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="CanvasLayer"]
offset_left = 864.924
offset_top = 81.5678
offset_right = 888.924
offset_bottom = 112.568
script = null

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
script = null

[node name="CameraGimbal" type="Node3D" parent="."]
script = ExtResource( 2 )

[node name="InnerGimbal" type="Node3D" parent="CameraGimbal"]
script = null

[node name="Camera" type="Camera3D" parent="CameraGimbal/InnerGimbal"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 20, 40)
far = 150.0
script = null

[connection signal="pressed" from="CanvasLayer/LaunchButton" to="." method="launchMarble"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="resetAll"]
[connection signal="value_changed" from="CanvasLayer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CanvasLayer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
